Reorganized tex files into many subdirectories

--- a/tex/Algebra/Group Theory.tex
+++ b/tex/Algebra/Group Theory.tex
@@ -342,7 +342,7 @@
 			\end{itemize}
 			\begin{figure}[h!]
 				\centering
-				\includegraphics{resources/img/subgroup_example_rectangle_symmetries.png}
+				\includegraphics{\resourceDir/img/subgroup_example_rectangle_symmetries.png}
 				\par
 			\end{figure}
 			These symmetry operations form a group whose group table is as follows.
@@ -982,7 +982,7 @@
 	\[ \overline{\phi}(\overline{s}) = \phi(s). \]
 	
 	\begin{figure}[h!]
-		\includegraphics[width=\linewidth]{resources/img/group_homomorphism_schematic.png}
+		\includegraphics[width=\linewidth]{\resourceDir/img/group_homomorphism_schematic.png}
 		\caption{A schematic diagram of a group homomorphism}
 	\end{figure}
 
