--- a/tex/Algebra/LinearAlgebraOfPolynomials.tex
+++ b/tex/Algebra/LinearAlgebraOfPolynomials.tex
@@ -2,7 +2,7 @@
 
 \date{\vspace{-6ex}}
 
-\graphicspath{ {./resources/img/LinearAlgebraOfPolynomials_images/} }
+\graphicspath{ {./\resourceDir/img/LinearAlgebraOfPolynomials_images/} }
 
 \begin{document}
 
@@ -86,7 +86,7 @@
 	
 	\begin{par}
 	\begin{flushleft}
-	meaning that $\left(x-1\right)$and $\left(x-3\right)$are factors. Therefore,
+	meaning that $\left(x-1\right)$ and $\left(x-3\right)$ are factors. Therefore,
 	\end{flushleft}
 	\end{par}
 	
@@ -278,7 +278,7 @@
 			\]
 		}
 		\item{${ p_2(x) = -\frac{1}{4}(x^2-6x+5) }$
-			\[ \V{p}_2 = \begin{bmatrix}1/4\\-3/2\\5/4\end{bmatrix} \eqand 
+			\[ \V{p}_2 = \begin{bmatrix}-1/4\\3/2\\-5/4\end{bmatrix} \eqand 
 				\begin{bmatrix}
 				1 & 1 & 1\\
 				9 & 3 & 1\\
@@ -286,11 +286,11 @@
 				\end{bmatrix}
 				\V{p}_2 =
 				\begin{bmatrix}
-				1/4 - 3/2 + 5/4\\
-				9/4 - 9/2 + 5/4\\
-				25/4 - 15/2 + 5/4
+				-1/4 + 3/2 - 5/4\\
+				-9/4 + 9/2 - 5/4\\
+				-25/4 + 15/2 - 5/4
 				\end{bmatrix} =
-				\begin{bmatrix}0\\-1\\0\end{bmatrix}.
+				\begin{bmatrix}0\\1\\0\end{bmatrix}.
 			\]
 		}
 		\item{${ p_3(x) = \frac{3}{8}(x^2-8x+15) }$
@@ -318,9 +318,9 @@
 		\end{bmatrix}
 		(\V{p}_1 + \V{p}_2 + \V{p}_3)
 		 = 
-		\begin{bmatrix}0\\0\\2\end{bmatrix} + \begin{bmatrix}0\\-1\\0\end{bmatrix} + \begin{bmatrix}3\\0\\0\end{bmatrix}
+		\begin{bmatrix}0\\0\\2\end{bmatrix} + \begin{bmatrix}0\\1\\0\end{bmatrix} + \begin{bmatrix}3\\0\\0\end{bmatrix}
 		= 
-		\begin{bmatrix}3\\-1\\2\end{bmatrix}.
+		\begin{bmatrix}3\\1\\2\end{bmatrix}.
 	\]
 }
 
