--- a/tex/Algebra/Matrices.tex
+++ b/tex/Algebra/Matrices.tex
@@ -21,7 +21,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 	\end{align*}
 	
 	\begin{center}
-	\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/linear_transformation.png}
+	\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/linear_transformation.png}
 	\end{center}
 }
 
@@ -708,7 +708,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 		
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/translation.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/translation.png}
 		\end{center}
 		
 		\subparagraph{Rotation}
@@ -731,7 +731,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 	
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/rotation.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/rotation.png}
 		\end{center}
 		
 		\subsubsection{Conformal}
@@ -755,7 +755,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 	
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/uniform_scaling.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/uniform_scaling.png}
 		\end{center}
 		
 		\subsubsection{Affine}
@@ -779,7 +779,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 	
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/non_uniform_scaling.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/non_uniform_scaling.png}
 		\end{center}
 		
 		\subparagraph{Shearing}
@@ -802,7 +802,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 	
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/shearing1.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/shearing1.png}
 		\end{center}
 		
 		\begin{align*}
@@ -824,7 +824,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 	
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/shearing2.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/shearing2.png}
 		\end{center}
 		
 		\subparagraph{Reflection}
@@ -847,7 +847,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 	
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/reflection.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/reflection.png}
 		\end{center}
 	}
 	
@@ -1204,7 +1204,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 		
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/linear_transformation.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/linear_transformation.png}
 		\end{center}
 		
 		Note that the result looks exactly the same - it's just that now the x-vector $\langle 1, 0 \rangle$, produces $\langle 4, 2 \rangle$ and the y-vector, $\langle 0, 1 \rangle$ produces $\langle 3, 1 \rangle$.
@@ -1229,7 +1229,7 @@ We transform the unit square in the source space, $X$ in $\R{2}$, using the 2D t
 		\end{align*}
 		
 		\begin{center}
-		\includegraphics[scale=0.85]{resources/img/GeometryOfMatrices_images/row_swap.png}
+		\includegraphics[scale=0.85]{\resourceDir/img/GeometryOfMatrices_images/row_swap.png}
 		\end{center}
 		
 		Note that if we swap \textbf{both} the columns and the rows then we get back to a transformation with determinant $10$.
