--- a/tex/Analysis/Analysis.tex
+++ b/tex/Analysis/Analysis.tex
@@ -385,7 +385,7 @@
 			\end{enumerate}
 								
 			Bear in mind that, in general, ${ \lim_{n \to \infty} \abs{x_n} = L \centernot\implies \lim_{n \to \infty} x_n = L }$. For example, if $x_n$ converges to $-L$ then $\abs{x_n}$ will converge to $L$.\\
-			\href{https://github.com/mcopeland2001/maths-notes/blob/master/resources/code/python/converge_to_minus_2.py}{\scriptsize\ttfamily{code example}}\\\\
+			\href{https://github.com/mcopeland2001/maths-notes/blob/master/\resourceDir/code/python/converge_to_minus_2.py}{\scriptsize\ttfamily{code example}}\\\\
 			
 			Furthermore, the example \ref{ex:infinite_recurrence} showed how the fact of $a_n$ and $a_{n+1}$ converging to the same limit produces - when the sequence is expressed as a recurrence - an equilibrium value.
 		\end{proof}
