--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -53,6 +53,14 @@
 \usepackage{commath}
 
 
+\def\buildDir{../build}
+\def\resourceDir{../resources}
+\def\texBaseDir{.}
+\def\foundationsDir{\texBaseDir/Foundations}
+\def\algebraDir{\texBaseDir/Algebra}
+\def\analysisDir{\texBaseDir/Analysis}
+\def\calculusDir{\texBaseDir/Calculus}
+\def\ProblemsDir{\texBaseDir/Problems}
 
 
 \definecolor{note_bg}{RGB}{247,247,247}
