--- a/tex/Problems.tex
+++ b/tex/Problems.tex
@@ -6,11 +6,9 @@
 \begin{document}
 	\maketitle
 	
-	\subfile{"Integration Techniques"}
+	\subfile{"\ProblemsDir/Integration Techniques"}
 	\newpage
-	\subfile{limits}
+	\subfile{\ProblemsDir/limits}
 	\newpage
-	\subfile{"Taylor Series"}
-	\newpage
-	\subfile{Further_Calculus_exam_notes.tex}
+	\subfile{\ProblemsDir/Further_Calculus_exam_notes.tex}
 \end{document}
