--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -98,6 +98,7 @@
 \newcommand{\notdivides}{\nmid}
 \newcommand{\eqand}{\hspace{10pt}\text{and}\hspace{10pt}}
 \newcommand{\modulo}[1]{\;(\bmod\; #1)}
+\newcommand{\uminus}{\scalebox{0.5}[1.0]{$-$}}  % unary minus scaled by argument
 
 
 \newcommand{\wrong}{\begingroup\color{red}\text{Wrong!}\endgroup}
@@ -114,6 +115,7 @@
 \DeclareRobustCommand{\F}[1]{\mathbb{F}^{#1}}
 \DeclareRobustCommand{\inv}[1]{{#1}^{-1}}
 \DeclareRobustCommand{\logicsep}{\;.\;}
+
 
 \newenvironment{amatrix}[1]{% from https://gitlab.com/jim.hefferon/linear-algebra/-/blob/master/src/sty/linalgjh.sty
 	\left[\begin{array}{@{}*{#1}{c}|c@{}}
