--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -16,7 +16,7 @@
 	\searchableChapter{Algebra}{abstract algebra, complex numbers}\biggerskip
 	\subfile{"\algebraDir/Group Theory"}
 	\newpage	
-	\subfile{"\algebraDir/Matrices"}
+	%\subfile{"\algebraDir/Matrices"}
 	\pagebreak
 	\subfile{"\algebraDir/LinearAlgebraOfPolynomials"}
 	\newpage	
@@ -32,6 +32,8 @@
 	\subfile{"\calculusDir/The Number e"}
 	\newpage
 	\subfile{"\calculusDir/Differentiation"}
+	\newpage
+	\subfile{"\calculusDir/Integration"}
 	\newpage
 	\subfile{"\calculusDir/Difference Equations and Differential Equations"}
 	\newpage
