--- a/tex/unused/temp.tex
+++ b/tex/unused/temp.tex
@@ -1,4 +1,4 @@
-\documentclass[MathsNotesBase.tex]{subfiles}
+\documentclass[../MathsNotesBase.tex]{subfiles}
 
 \date{\vspace{-6ex}}
 
@@ -14,5 +14,8 @@ Testing latexmk - two different approaches to the repeated roots:
 	\begin{itemize}
 		\item{take complex distinct roots and let the imaginary part go to zero - results in ${ \lim_{x \to 0} \frac{\sin{x}}{x} = x }$.}
 	\end{itemize}
+
+	\hrule
+	\biggerskip
 	
 \end{document}
